--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: Generate Datas
 on:
+  push:
+    branch:
+      -main
+  permissions:
+    contents: write
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
