--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,12 @@ on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
-  permissions:
-    contents: write
+  
+  push:
+    branches:
+      - main
+permissions:
+  contents: write
 jobs:
   build:
     name: Jobs to update datas
